--- a/climate_biomass_analysis/climate_analysis_config.yml
+++ b/climate_biomass_analysis/climate_analysis_config.yml
@@ -43,122 +43,174 @@ bioclim:
   temp_conversion: 0.1                        # Convert from Kelvin*10 to Celsius
   
   # Precipitation scaling
-  precip_scaling: 1000.0                      # Convert from m to mm
-
-# Climate raster processing
-climate_processing:
-  # Target CRS for climate data
-  target_crs: "EPSG:25830"                    # Spain national CRS
+  precip_scaling: 1.0                         # No scaling for precipitation
   
-  # Resampling method for raster operations
-  resampling_method: "bilinear"
-  
-  # Climate data file patterns
-  temp_pattern: "2t_*.tif"                    # Temperature files
-  precip_pattern: "tp_*.tif"                  # Precipitation files
-  
-  # Raster harmonization
-  harmonization:
-    chunk_size: 1000                          # Chunk size for large raster processing
-    compress: "lzw"                           # Output compression
-
-# Biomass integration parameters
-biomass_integration:
-  # Biomass file patterns
-  pattern: "*_rel_change_*.tif"               # Biomass difference file pattern
-  resampling_method: "bilinear"               # Resampling method for biomass data
-  
-  # Quality control
-  max_valid_pixels: 1000000                   # Maximum pixels to process per dataset
-  remove_outliers: true                       # Remove statistical outliers
-  outlier_threshold: 3.0                      # Standard deviations for outlier detection
+  # Rolling year configuration
+  rolling_months: [9, 10, 11, 12, 1, 2, 3, 4, 5, 6, 7, 8]  # Sep-Aug
 
 # Spatial analysis configuration
-spatial_analysis:
+spatial:
   # Semivariogram calculation
-  max_points_per_bin: 10000                   # Maximum point pairs per distance bin
-  n_reference_points: 10000                   # Number of reference points to sample
-  sample_fraction: 0.1                       # Fraction of pixels to sample for analysis
+  max_lag_distance: 300000                    # Maximum lag distance in meters
+  n_lags: 50                                  # Number of lag bins
   
-  # Distance binning
-  max_distance_km: 500                        # Maximum distance for semivariogram (km)
-  n_distance_bins: 50                         # Number of distance bins
+  # Autocorrelation analysis
+  sill_threshold: 0.95                        # Threshold for 95% of sill
+  knee_sensitivity: 1.0                       # Sensitivity for knee detection
   
-  # Clustering parameters
-  clustering:
-    method: "kmeans"                          # Clustering algorithm
-    n_clusters_range: [10, 50]               # Range of clusters to test
-    min_cluster_size: 100                     # Minimum points per cluster
-    
-# Machine learning optimization
+  # Clustering configuration
+  autocorr_factor: 1.5                        # Factor to multiply autocorr range
+  elbow_sensitivity: 1.0                      # Sensitivity for elbow detection
+  max_clusters: 50                            # Maximum number of clusters to test
+
+# Machine learning optimization configuration
 optimization:
-  # Bayesian optimization settings
-  n_trials: 1000                             # Number of optimization trials per run
-  n_runs: 10                                 # Number of independent optimization runs
-  random_seeds: [42, 123, 456, 789, 101112, 131415, 161718, 192021, 222324, 252627]
+  # Optimization runs
+  n_trials: 1000                             # Trials per optimization run
+  n_runs: 10                                 # Independent optimization runs
+  random_seeds: [42, 123, 456, 789, 999, 111, 222, 333, 444, 555]
   
   # Cross-validation strategy
   cv_strategy:
     method: "spatial"                         # Spatial cross-validation
-    test_blocks: 2                            # Number of spatial blocks for testing
-    validation_blocks_range: [2, 4]          # Range of validation blocks
-  
-  # Feature selection
-  features:
-    # Bioclimatic variables to exclude from analysis
-    exclude_bio_vars: ['bio8', 'bio9', 'bio18', 'bio19']  # Temperature and precipitation of wettest/driest quarters
+    test_blocks: 2                            # Spatial blocks for testing
+    validation_blocks_range: [3, 4]          # Range for validation blocks
     
-    # Feature preprocessing
-    standardize: true                         # Standardize features before ML
-    remove_correlated: true                   # Remove highly correlated features
-    correlation_threshold: 0.95               # Correlation threshold for removal
-  
-  # XGBoost hyperparameter ranges
+  # Feature selection and processing
+  features:
+    exclude_bio_vars: ['bio8', 'bio9', 'bio18', 'bio19']  # Exclude problematic bio vars
+    standardize: true                         # Standardize features
+    correlation_threshold: 0.95               # Correlation threshold for feature removal
+    
+  # Model hyperparameters
   hyperparameters:
-    n_estimators: [50, 500]                   # Number of trees
-    max_depth: [3, 10]                        # Maximum tree depth
-    learning_rate: [0.01, 0.3]               # Learning rate
-    subsample: [0.6, 1.0]                     # Subsample ratio
-    colsample_bytree: [0.6, 1.0]             # Feature subsample ratio
-    min_child_weight: [1, 10]                # Minimum child weight
-    reg_alpha: [0, 10]                        # L1 regularization
-    reg_lambda: [1, 10]                       # L2 regularization
-  
+    n_estimators: [50, 500]                   # Range for number of estimators
+    max_depth: [3, 12]                        # Range for maximum depth
+    subsample: [0.8, 1.0]                     # Range for subsample ratio
+    colsample_bytree: [0.8, 1.0]              # Range for feature sampling
+    learning_rate: [0.01, 0.3]                # Range for learning rate
+    reg_alpha: [0, 10]                        # Range for L1 regularization
+    reg_lambda: [1, 100]                      # Range for L2 regularization
+    
   # Early stopping
   early_stopping:
-    patience: 40                              # Trials without improvement before stopping
-    min_trials: 100                           # Minimum trials before early stopping
+    patience: 40                              # Trials without improvement
+    min_trials: 100                           # Minimum trials before stopping
+    
+  # Feature selection constraints
+  max_features: 15                            # Maximum number of features to select
 
-# Output configuration
-output:
-  # File formats
-  raster_format: "GTiff"                      # Output raster format
-  vector_format: "ESRI Shapefile"             # Output vector format
+# SHAP Analysis configuration
+shap_analysis:
+  # Data paths for SHAP analysis
+  paths:
+    # Input paths
+    models_dir: "results/climate_biomass_analysis/models"  # Models directory
+    clustered_dataset: "results/climate_biomass_analysis/ml_dataset_with_clusters.csv"
+    
+    # Output paths
+    shap_analysis_dir: "results/climate_biomass_analysis/shap_analysis"
   
-  # Compression and optimization
-  compression: "lzw"                          # Raster compression method
-  create_overviews: true                      # Create overview pyramids
+  # Model filtering parameters
+  model_filtering:
+    r2_threshold: 0.2                         # Minimum R² threshold for model inclusion
+    r2_threshold_interactions: 0.2            # R² threshold for interaction analysis
+    top_percentile_interactions: 10           # Top percentile of models for interactions
+    min_selection_freq_interactions: 0.3      # Minimum selection frequency for interaction features
   
-  # Output organization
-  create_subdirectories: true                 # Organize outputs in subdirectories
-  preserve_intermediate: false                # Keep intermediate processing files
+  # Analysis parameters
+  analysis:
+    # SHAP importance calculation
+    shap_max_samples: 1000
+    shap_max_background: 100
+    
+    # Permutation importance calculation
+    perm_max_samples: 5000
+    perm_n_repeats: 10
+    
+    # PDP analysis
+    pdp_max_samples: 3000
+    pdp_background_size: 1000
+    pdp_n_top_features: 6
+    pdp_x_range: [-2.5, 2.5]
+    pdp_lowess_frac: 0.3
+    pdp_n_models_subsample: 50
+    
+    # Interaction analysis
+    interaction_max_samples: 1000
+    interaction_max_background: 200
+    interaction_n_top_features: 6
+    interaction_feature_1: "bio12"            # Annual precipitation
+    interaction_feature_2: "bio12_3yr"        # 3-year accumulated precipitation
+
+# Variable name mapping for readable labels
+variable_mapping:
+  # Temperature variables
+  bio1: "Annual temp."
+  bio2: "Diurnal temp. range"
+  bio3: "Isothermality"
+  bio4: "Temp. seasonality"
+  bio5: "Max temp. of warmest month"
+  bio6: "Min temp. of coldest month"
+  bio7: "Annual temp. range"
+  bio8: "Temp. of wettest quarter"
+  bio9: "Temp. of driest quarter"
+  bio10: "Temp. of warmest quarter"
+  bio11: "Temp. of coldest quarter"
   
-# Logging configuration
-logging:
-  level: "INFO"                               # Logging level (DEBUG, INFO, WARNING, ERROR)
-  log_file: null                              # Log file path (null = console only)
-  format: "%(asctime)s - %(name)s - %(levelname)s - %(message)s"
+  # Precipitation variables
+  bio12: "Annual prec."
+  bio13: "Prec. of wettest month"
+  bio14: "Prec. of driest month"
+  bio15: "Prec. seasonality"
+  bio16: "Prec. of wettest quarter"
+  bio17: "Prec. of driest quarter"
+  bio18: "Prec. of warmest quarter"
+  bio19: "Prec. of coldest quarter"
+  
+  # Other variables
+  pdsi: "Palmer drought severity index"
+  spei: "Stand. precip. evapotrans. index"
+  vpd: "Vapor pressure deficit"
+  pet: "Potential evapotranspiration"
 
 # Processing configuration
 processing:
-  # Multiprocessing
-  n_workers: 4                                # Number of parallel workers
-  chunk_size: 1000                            # Chunk size for parallel processing
+  # Parallel processing
+  n_workers: -1                               # Number of workers (-1 for all cores)
+  chunk_size: 1000                            # Chunk size for processing
   
   # Memory management
-  max_memory_gb: 8                            # Maximum memory usage (GB)
-  cleanup_intermediate: true                  # Clean up intermediate files
+  memory_limit: "8GB"                         # Memory limit per worker
   
-  # Progress reporting
-  show_progress: true                         # Show progress bars
-  progress_update_interval: 10                # Progress update interval (seconds)
+  # Quality control
+  validate_inputs: true                       # Validate input data
+  check_spatial_alignment: true               # Check raster alignment
+  
+# Logging configuration
+logging:
+  level: "INFO"                               # Logging level
+  format: "%(asctime)s - %(name)s - %(levelname)s - %(message)s"
+  date_format: "%Y-%m-%d %H:%M:%S"
+  
+# File I/O configuration
+io:
+  # Raster settings
+  compress: "lzw"                             # Compression for output rasters
+  tiled: true                                 # Use tiled rasters
+  blockxsize: 512                             # Block size X
+  blockysize: 512                             # Block size Y
+  
+  # CSV settings
+  csv_chunksize: 10000                        # Chunk size for CSV processing
+  
+# Geographic configuration
+geographic:
+  # Target coordinate reference system
+  target_crs: "EPSG:25830"                    # ETRS89 / UTM zone 30N
+  
+  # Resampling method
+  resampling_method: "bilinear"               # Default resampling method
+  
+  # No data value
+  nodata: -9999                               # No data value for rasters
