--- a/biomass_model/config.yml
+++ b/biomass_model/config.yml
@@ -49,6 +49,9 @@ compute:
   num_workers: 4  # Number of Dask workers
   memory_limit: '4GB'  # Memory limit per worker
   chunk_size: 1024  # Raster chunk size for processing
+  max_memory_usage: 0.8  # Maximum memory usage threshold
+  chunk_size: 1024       # Target chunk size in MB
+  threads_per_worker: 2  # Dask threads per worker
 
 # Logging configuration
 logging:
