--- a/climate_biomass_analysis/config.yml
+++ b/climate_biomass_analysis/config.yml
@@ -13,14 +13,15 @@ time_periods:
   analysis:
     start_year: 2017
     end_year: 2024
-    rolling: true                             # Use Sep-Aug rolling years
+    rolling: true  
+    start_year: 2015
+    end_year: 2024
+    rolling: true                            # Use Sep-Aug rolling years
 
 # Bioclimatic variables configuration
 bioclim:
   # Variables to calculate (bio1-bio19)
-  variables: ['bio1', 'bio2', 'bio3', 'bio4', 'bio5', 'bio6', 'bio7', 'bio8', 
-              'bio9', 'bio10', 'bio11', 'bio12', 'bio13', 'bio14', 'bio15', 
-              'bio16', 'bio17', 'bio18', 'bio19']
+  variables: ['bio1', 'bio4', 'bio5', 'bio6', 'bio7', 'bio10', 'bio11', 'bio12', 'bio13', 'bio14', 'bio15', 'bio16', 'bio17']
   
   # Temperature unit conversion
   temp_conversion: 0.1                        # Convert from Kelvin*10 to Celsius
