--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,28 @@
 
 project_temptative_structure.txt
+
+data/raw/forest_type_maps/
+
+data/raw/forest_inventory/nfi4/
+
+*.pyc
+
+*.xls
+
+data/processed/forest_inventory/per_utm/
+
+data/processed/forest_inventory/per_year/
+
+sentinel2_processing/.DS_Store
+
+data/processed/forest_inventory/
+
+*.tif
+
+*.dbf
+
+*.prj
+
+*.shp
+
+*.shx
