--- a/environments/env_climate_analysis.yml
+++ b/environments/env_climate_analysis.yml
@@ -23,6 +23,11 @@ dependencies:
   - eccodes
   - tqdm
   - pyyaml
+  - earthkit-data
+  - kneed
+  - optuna
+  - xgboost
+  - shap
   - scikit-learn
   - shapely
   - pyproj
